--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,9 @@ body {
 }
 
 #Content {
-	
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media screen and (max-width: 860px) {
