--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ body {
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
+	border: 3px solid black;
 }
 
 @media screen and (max-width: 860px) {
