--- a/php-project/css/main.css
+++ b/php-project/css/main.css
@@ -1,85 +1,22 @@
 body {
 	margin: 0;
-}
-
-#HeaderImage {
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: 0;
-	padding: 10px;
-	height: 45px;
-}
-
-#NavBar {
-	/* Text */
-	font-size: 20px;
 	font-family: Tahoma, Geneva, sans-serif;
-	text-shadow: 3px 2px 3px #333333;
-	
-	/* Texturing */
-    background-color: #4C4C4C;
-	box-shadow: 0px 4px 2px #888888;
-	
-	/* Formatting */
-	width: 100%;
-	height: 65px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#NavBar ul {
-	/* Formatting */
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: flex-end;
-	padding: 0px;
-	margin: 0px;
-	height: 65px;
-	
-	/* Styling */
-	list-style-type: none;
-}
-
-#NavBar li {
-	/* Formatting */
-	align-self: center;
-	padding: 20px;
-}
-
-#NavBar a {
-	max-height: 100%;
-	text-decoration: none;
-    color: white;
-}
-
-#CurrentPage {
-	background-color: #0A0A0A;
+	background-color: #DEDEFF;
 }
 
 #Content {
-	max-width: 700px;
+	max-width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
-	border: 3px solid black;
+	background-color: #FFFFFF;
 }
 
-@media screen and (max-width: 860px) {
-	#NavBar {
-		font-size: 14px;
-	}
-	
-	#HeaderImage {
-		height: 25px;
-	}
-	
-	#NavBar img {
-		height: 25px;
-	}
+hr {
+	border-color: #4C4C4C;
 }
 
-@media screen and (max-width: 655px) {
-	#NavBar {
-		height: 120px;
-	}
+.Title {
+	color: #5F9EA0;
+	text-align: center;
+	font-weight: normal;
 }
