--- a/php-project/templates/contactContent.html
+++ b/php-project/templates/contactContent.html
@@ -7,6 +7,6 @@
         Hello! My name is Grant Merrill, but here I am known as Kacologo! I am a gamer in many respects. I mainly enjoy recording Let's plays of my
         favorite games and streaming speedruns of them as well. Bringing enjoyment through commentary and gameplay is my goal. Hopefully this is
         accomplished. Enjoy yourself here on this website. If you have any questions for me or want to collaborate with me, please contact me at:
-        <a href="malito:kacologo.business@gmail.com">kacologo.business@gmail.com</a> Bye my friends!!
+        <a href="mailto:kacologo.business@gmail.com">kacologo.business@gmail.com</a> Bye my friends!!
     </p>
 </section>
