--- a/php-project/templates/forumContent.html
+++ b/php-project/templates/forumContent.html
@@ -1,3 +1,5 @@
-<?php require("database/databaseConnect.php"); ?>
+<section>
+    <?php require("database/databaseConnect.php"); ?>
 
-<?php loadDatabase() ?>
+    <?php loadDatabase() ?>
+</section>
