--- a/php-project/templates/forumContent.html
+++ b/php-project/templates/forumContent.html
@@ -1,5 +1,3 @@
-<section>
-    <?php require("database/databaseConnect.php"); ?>
+<?php require("database/databaseConnect.php"); ?>
 
-    <?php loadDatabase() ?>
-</section>
+<?php loadDatabase(); ?>
