--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -5,12 +5,20 @@
 .ForumCat {
     font-size: 15px;
     background-color: darkgray;
+    padding-left: 5px;
 }
 
 .ForumSubCat {
     font-size: 14px;
+    padding-left: 5px;
 }
 
 .SubCatDescription {
     font-size: 11px;
+    padding-left: 5px;
+}
+
+hr {
+    width: 80%;
+    border-color: dimgray;
 }
