--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -2,13 +2,21 @@
     padding: 10px;
 }
 
-.ForumCat {
+.Cat {
+    
+}
+
+.CatName {
     font-size: 15px;
     background-color: darkgray;
     padding-left: 5px;
 }
 
-.ForumSubCat {
+.SubCat {
+    
+}
+
+.SubCatName {
     font-size: 14px;
     padding-left: 5px;
 }
@@ -19,6 +27,6 @@
 }
 
 hr.ForumLine {
-    width: 90%;
+    width: 100%;
     border-color: dimgray;
 }
