--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -9,7 +9,7 @@
 .CatName {
     font-size: 15px;
     background-color: darkgray;
-    padding-left: 5px;
+    padding: 5px;
     margin: 10px 0px;
 }
 
