--- a/php-project/templates/navigator.html
+++ b/php-project/templates/navigator.html
@@ -7,7 +7,7 @@
 		</li>
 		<li ng-class="{CurrentPage:main.isPageSet('HOME')}"><a href="php_index.html">HOME</a></li>
 		<li ng-class="{CurrentPage:main.isPageSet('VIDEOS')}"><a href="videos.html">VIDEOS</a></li>
-		<li ng-class="{CurrentPage:main.isPageSet('FORUM')}"><a href="forum.php">FORUM</a></li>
+		<li ng-class="{CurrentPage:main.isPageSet('FORUM')}"><a href="forum.php?page=0">FORUM</a></li>
 		<li ng-class="{CurrentPage:main.isPageSet('CONTACT')}"><a href="contact.html">CONTACT</a></li>
 	</ul>
 </nav>
