--- a/php-project/css/signup.css
+++ b/php-project/css/signup.css
@@ -5,3 +5,28 @@
 .ng-valid.ng-dirty {
     border-color: #78FA89;
 }
+
+form {
+    padding:1em;
+	border:1px solid #eee;
+}
+
+input {
+	padding:0.15em;
+	width:10em;
+	border:1px solid #ddd;
+	background:#fafafa;
+	font:bold 0.95em arial, sans-serif;
+	-moz-border-radius:0.4em;
+	-khtml-border-radius:0.4em;
+}
+
+input:hover, input:focus {
+	border-color:#c5c5c5;
+	background:#f6f6f6;
+} 
+
+#Results {
+    color: #5F9EA0;
+    padding: 10px;
+}
