Testing css styling on form.

--- a/php-project/css/signup.css
+++ b/php-project/css/signup.css
@@ -19,8 +19,8 @@ div {
 
 label {
     display: table-cell;
-    float: left;
-    text-align: right;
+    /*float: left;
+    text-align: right;*/
 }
 
 input {
