--- a/php-project/css/signup.css
+++ b/php-project/css/signup.css
@@ -8,7 +8,8 @@ input.ng-valid.ng-dirty {
 
 form {
     display: table;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     padding:1em;
 	border:1px solid #eee;
 }
