--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -1,3 +1,61 @@
+#Tabs ul {
+    padding: 0px;
+    margin: 0px;
+    margin-left: 10px;
+    list-style-type: none;
+}
+
+#Tabs ul li {
+    display: inline-block;
+    clear: none;
+    float: left;
+    height: 24px;
+}
+
+#Tabs ul li a {
+    position: relative;
+    margin-top: 16px;
+    display: block;
+    margin-left: 6px;
+    line-height: 24px;
+    padding-left: 10px;
+    background: #f6f6f6;
+    z-index: 9999;
+    border: 1px solid #ccc;
+    border-bottom: 0px;
+
+    -moz-border-radius-topleft: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    border-top-right-radius: 4px;
+
+    width: 130px;
+    color: #000000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#Tabs ul li a:hover {
+    text-decoration: underline;
+}
+
+#Tabs #Content_Area {
+    padding: 0 15px;
+    clear:both;
+    overflow:hidden;
+    line-height:19px;
+    position: relative;
+    top: 20px;
+    z-index: 5;
+    height: 150px;
+    overflow: hidden;
+}
+
+p {
+    padding-left: 15px;
+}
+
+/*
 .nav {
     padding-left: 0;
     margin-bottom: 0;
@@ -17,7 +75,6 @@ ul {
     position: relative;
     display: block;
 }
-
 .nav>li>a {
   position: relative;
   display: block;
@@ -122,4 +179,4 @@ ul {
 .nav-pills > li.active > a:focus {
   color: #fff;
   background-color: #337ab7;
-}
+}*/
