--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -19,7 +19,7 @@
     margin-left: 6px;
     line-height: 24px;
     padding-left: 10px;
-    background: #f6f6f6;
+    /*background: #f6f6f6;*/
     z-index: 9999;
     border: 1px solid #ccc;
     border-bottom: 0px;
