--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -22,12 +22,9 @@
     background: #F6F6F6;
     /*z-index: 9999;*/
     border: 1px solid #ccc;
-    border-bottom: 0px;
 
-    -moz-border-radius-topleft: 4px;
-    border-top-left-radius: 4px;
-    -moz-border-radius-topright: 4px;
-    border-top-right-radius: 4px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
 
     width: 130px;
     color: #000000;
@@ -41,10 +38,10 @@
 }
 
 #Tabs ul li a.active {
-    color: #555;
+    color: #FFFFFF;
     cursor: default;
     background-color: #337AB7;
-    border: 1px solid #ddd;
+    border: 1px solid #DDDDDD;
     border-bottom-color: transparent;
 }
 
