--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -18,7 +18,7 @@
     display: block;
     margin-left: 6px;
     line-height: 24px;
-    padding-left: 10px;
+    /*padding-left: 10px;*/
     background: #F6F6F6;
     /*z-index: 9999;*/
     text-align: center;
