Trying other styling

--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -53,6 +53,7 @@
     line-height:19px;
     position: relative;
     top: 20px;
+    border: 2px solid black;
     /*z-index: 5;*/
     height: 150px;
     overflow: hidden;
