Trying other styling

--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -54,7 +54,7 @@
     position: relative;
     margin-left: 6px;
     margin-right: 6px;
-    /*top: 20px;*/
+    top: 18px;
     border: 1px solid #CCCCCC;
     /*z-index: 5;*/
     /*height: 150px;*/
