--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -24,9 +24,9 @@
     text-align: center;
     border: 1px solid #ccc;
 
-    border-radius: 4px;
+    /*border-radius: 4px;
     -moz-border-radius: 4px;
-
+*/
     width: 180px;
     color: #000000;
     text-decoration: none;
