Testing navigation bar for forum

--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -19,11 +19,15 @@
 
 #ForumNav > ul > li {
     float: left;
-    font-size: 0.9rem;
+    font-size: 0.4rem;
     list-style: none;
     max-width: 30%;
-    padding-right: 10px;
+    /*padding-right: 10px;*/
     position: relative;
+}
+
+#ForumNav > ul > li > a {
+    text-decoration: none;
 }
 
 .Cat {
