--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -14,6 +14,7 @@
 }
 
 #ForumNav > ul {
+    margin: 0px;
     list-style: none;
 }
 
@@ -26,7 +27,7 @@
 }
 
 #ForumNav > ul > li > a {
-    padding-right: 10px;
+    padding-left: 10px;
     text-decoration: none;
     color: #6e6859;
 }
