Creating videos page.

--- a/php-project/templates/videosContent.html
+++ b/php-project/templates/videosContent.html
@@ -1,6 +1,9 @@
 <section id="VideosList">
+    <h1 class="Title">Videos</h1>
+
     <a class="VideoLink" ng-repeat="video in videos" ng-href="{{video.link}}">
         <img class="Video" ng-src="{{video.thumb}}" />
     </a>
-
+    
+    <p>Want to see more? Click <a href="https://www.youtube.com/user/kacologo/videos">here!</a></p>
 </section>
