Creating videos page.

--- a/php-project/templates/videosContent.html
+++ b/php-project/templates/videosContent.html
@@ -3,10 +3,10 @@
 
     <section id="VideosList">
 
-        <a class="VideoLink" ng-repeat="video in videos" ng-href="{{video.link}}">
+        <a class="VideoLink" ng-repeat="video in videos" ng-href="{{video.link}}" target="_blank">
             <img class="Video" ng-src="{{video.thumb}}" />
         </a>
 
-        <p>Want to see more? Click <a href="https://www.youtube.com/user/kacologo/videos">here!</a></p>
+        <p>Want to see more? Click <a href="https://www.youtube.com/user/kacologo/videos" target="_blank">here!</a></p>
     </section>
 </section>
