--- a/php-project/templates/videosContent.html
+++ b/php-project/templates/videosContent.html
@@ -7,5 +7,5 @@
         </a>
     </section>
     
-    <p>Want to see more? Click <a href="https://www.youtube.com/user/kacologo/videos" target="_blank">here!</a></p>
+    <p style="text-align: center;">Want to see more? Click <a href="https://www.youtube.com/user/kacologo/videos" target="_blank">here!</a></p>
 </section>
