--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -81,6 +81,8 @@ hr.ForumLine {
 }
 
 .User {
+    font-size: 24px;
+    padding: 5px;
     border-right: 2px black solid;
     width: 300px;
     height: 100%;
