--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -91,6 +91,6 @@ hr.ForumLine {
     text-align: center;
     border-right: 2px #5F9EA0 solid;
     width: 300px;
-    height: 100%;
+    height: inherit;
     margin: 0px;
 }
