--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -91,7 +91,7 @@ hr.ForumLine {
     text-align: center;
     border-right: 2px #5F9EA0 solid;
     max-width: 300px;
-    width: 300px;
+    min-width: 300px;
     height: inherit;
     margin: 0px;
 }
