--- a/php-project/templates/homeContent.html
+++ b/php-project/templates/homeContent.html
@@ -1,6 +1,7 @@
 <section>
-    <iframe id="MainVideo" ng-src="{{mainVideo[0].info[1]}}" frameborder="0" width="880" height="495"
+    <iframe id="MainVideo" ng-src="{{mainVideo[0].info[1]}}" frameborder="0" 
                     webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <!--width="880" height="495"-->
     <h1 class="Title">{{videoTitle}}</h1>
 
     <div id="FeatVideosDiv">
