--- a/php-project/css/main.css
+++ b/php-project/css/main.css
@@ -21,3 +21,9 @@ hr {
 	font-weight: normal;
     font-size: 30px;
 }
+
+@media screen and (max-width: 770px) {
+    .Title {
+        font-size: 24px;
+    }
+}
