--- a/php-project/css/nav.css
+++ b/php-project/css/nav.css
@@ -1,13 +1,8 @@
 #NavBar {
-	/* Text */
 	font-size: 20px;
 	text-shadow: 3px 2px 3px #333333;
-	
-	/* Texturing */
     background-color: #4C4C4C;
 	box-shadow: 0px 4px 2px #888888;
-	
-	/* Formatting */
 	width: 100%;
 	height: 65px;
 	margin-left: auto;
@@ -15,20 +10,16 @@
 }
 
 #NavBar ul {
-	/* Formatting */
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: flex-end;
 	padding: 0px;
 	margin: 0px;
 	height: 65px;
-	
-	/* Styling */
 	list-style-type: none;
 }
 
 #NavBar li {
-	/* Formatting */
 	align-self: center;
 	padding: 20px;
 }
@@ -50,4 +41,14 @@
 
 .CurrentPage {
 	background-color: #0A0A0A;
+}
+
+@media screen and (max-width: 770px) {
+    #NavBar {
+        height: 130px;
+    }
+    
+    #NavBar ul {
+        height: 130px;
+    }
 }
