--- a/php-project/templates/homeContent.html
+++ b/php-project/templates/homeContent.html
@@ -15,7 +15,7 @@
     <h1 class="Title">{{twitchTitle}}</h1>
 
     <iframe id="TwitchVid" src="http://www.twitch.tv/kacologo/embed" frameborder="0"
-            scrolling="no" height="378" width="620"></iframe>
+            scrolling="no"></iframe>
 
     <iframe id="TwitchChat" src="http://www.twitch.tv/kacologo/chat?popout=" frameborder="0"
             scrolling="no" height="400" width="345"></iframe>
