--- a/php-project/css/home.css
+++ b/php-project/css/home.css
@@ -33,17 +33,6 @@
     margin: auto;
 }
 
-/*#FeatVideosDiv {
-	text-align: center;
-}*/
-
-/*.FeatVideos {
-	display: inline;
-	height: 188px;
-	width: 250px;
-	padding: 10px;
-}*/
-
 .VideoLink:hover:before {
 	display: inline-block;
 	content: '';
@@ -56,21 +45,28 @@
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 920px) {
     #MainVideo {
         width: 550px;
         height: 309px;
     }
     
     #TwitchVid {
-        width: 300px;
-        height: 183px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 630px) {
     #MainVideo {
-        width: 300px;
-        height: 169px;
+        width: 450px;
+        height: 253px;
+    }
+    
+    #TwitchVid {
+        width: 450px;
+        height: 274px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
