--- a/php-project/css/home.css
+++ b/php-project/css/home.css
@@ -17,7 +17,7 @@
     height: 495px;
 }
 
-#FeatVideosDiv {
+/*#FeatVideosDiv {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -42,7 +42,7 @@
 	position: absolute;
 	width: 260px;
 	height: 198px;
-}
+}*/
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 920px) {
