--- a/php-project/css/forum.css
+++ b/php-project/css/forum.css
@@ -95,3 +95,16 @@ hr.ForumLine {
     height: inherit;
     margin: 0px;
 }
+
+.PostInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 600px) {
+    .User {
+        max-width: 150px;
+        min-width: 150px;
+        font-size: 12px;
+    }
+}
