--- a/php-project/css/form.css
+++ b/php-project/css/form.css
@@ -26,7 +26,7 @@ label {
     vertical-align: top;
 }
 
-input, textarea {
+input, textarea, button {
     display: table-cell;
 	padding: 10px;
 	border: 1px solid #DDD;
