--- a/php-project/css/profile.css
+++ b/php-project/css/profile.css
@@ -17,15 +17,9 @@
     display: block;
     margin-left: 6px;
     line-height: 24px;
-    /*padding-left: 10px;*/
     background: #F6F6F6;
-    /*z-index: 9999;*/
     text-align: center;
     border: 1px solid #ccc;
-
-    /*border-radius: 4px;
-    -moz-border-radius: 4px;
-*/
     width: 180px;
     color: #000000;
     text-decoration: none;
@@ -55,8 +49,6 @@
     margin-right: 6px;
     top: 18px;
     border: 1px solid #CCCCCC;
-    /*z-index: 5;*/
-    /*height: 150px;*/
     overflow: hidden;
 }
 
@@ -64,128 +56,9 @@ p {
     padding-left: 15px;
 }
 
-/*
-.nav {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
+@media screen and (max-width: 570px) {
+    #Tabs ul li a {
+        width: 90px;
+        font-size: 0.5em;
+    }
 }
-
-ul {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-.nav-pills>li {
-    float: left;
-}
-
-.nav>li {
-    position: relative;
-    display: block;
-}
-.nav>li>a {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-}
-
-.nav > li > a:hover,
-.nav > li > a:focus {
-  text-decoration: none;
-  background-color: #eee;
-}
-
-.nav > li.disabled > a {
-  color: #777;
-}
-
-.nav > li.disabled > a:hover,
-.nav > li.disabled > a:focus {
-  color: #777;
-  text-decoration: none;
-  cursor: not-allowed;
-  background-color: transparent;
-}
-
-.nav .open > a,
-.nav .open > a:hover,
-.nav .open > a:focus {
-  background-color: #eee;
-  border-color: #337ab7;
-}
-
-.nav .nav-divider {
-  height: 1px;
-  margin: 9px 0;
-  overflow: hidden;
-  background-color: #e5e5e5;
-}
-
-.nav > li > a > img {
-  max-width: none;
-}
-
-.nav-tabs {
-  border-bottom: 1px solid #ddd;
-}
-
-.nav-tabs > li {
-  float: left;
-  margin-bottom: -1px;
-}
-
-.nav-tabs > li > a {
-  margin-right: 2px;
-  line-height: 1.42857143;
-  border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
-}
-
-.nav-tabs > li > a:hover {
-  border-color: #eee #eee #ddd;
-}
-
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus {
-  color: #555;
-  cursor: default;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-bottom-color: transparent;
-}
-
-.nav-tabs.nav-justified {
-  width: 100%;
-  border-bottom: 0;
-}
-
-.nav-tabs.nav-justified > li {
-  float: none;
-}
-
-.nav-tabs.nav-justified > li > a {
-  margin-bottom: 5px;
-  text-align: center;
-}
-
-.nav-tabs.nav-justified > .dropdown .dropdown-menu {
-  top: auto;
-  left: auto;
-}
-.nav-pills > li {
-  float: left;
-}
-.nav-pills > li > a {
-  border-radius: 4px;
-}
-.nav-pills > li + li {
-  margin-left: 2px;
-}
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:hover,
-.nav-pills > li.active > a:focus {
-  color: #fff;
-  background-color: #337ab7;
-}*/
